# STDANC

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
config/: switchingAFCMulti.yaml
files/: bandpass.mat
hardware_test/: ConRW.cpp  ContGen-ExtClk-Update.cpp  ContGen-ExtClk.cpp  cppVersion.cpp  distRej.cpp  distRejAFC.cpp  distRejSwitching.cpp  distRejTemplate.cpp  scanAmp.cpp  scanPhase.cpp  second_order_oscillator.cpp  taskLoop.cpp
include/controller/: base_controller.hpp  default_controller.hpp
include/logger/: data_logging.hpp
include/system/: ControlOutputSystem.h  StateSpace.h  TransferFunc.h
include/system_refactor/: base_system.hpp  integrated_system.hpp  linear_system.hpp  mt_controller.hpp
script/: data2video.py
simulation/: second_order_simulator.cpp
src/: daq_sim.cpp  daq_sim_continuous.cpp  daq_sine.cpp  daq_wrapper.cpp  main_loop.cpp
src/AncModel/: controlFunction.cpp  controlFunction.h
src/Wang2016Single/: controlFunction.cpp  controlFunction.h
src/Wang2016SingleDiscrete/: controlFunction.cpp  controlFunction.h
src/discreteMulti/: controlFunction.cpp  controlFunction.h
src/hgq/: controlFunction.cpp  controlFunction.h
src/robustAFC/: controlFunction.cpp  controlFunction.h
src/switchAFC/: controlFunction.cpp
src/switchingAFC/: controlFunction.cpp  controlFunction.h
src/switchingAFCMulti/: controlFunction.cpp  controlFunction.h
src/xjk/: controlFunction.cpp  controlFunction.h
utils/: freq_analysis.mlx  plot_log.py  utils.cpp  utils.h
utils/scripts/: dataUnpack.m  decoder.py  fdacoefs.h  freq_analysis.mlx  plot.py  t-u-y.py  video.mlx
